Adding in hand endpoints
