# miraculous-kingdom/src/models/services/ApiGameApiService.ts
@@ -1,18 +1,18 @@
 /* istanbul ignore file */
 /* tslint:disable */
 /* eslint-disable */
-import type { CharAddedDetailedResponse } from '../models/CharAddedDetailedResponse'
-import type { GameCreation } from '../models/GameCreation'
-import type { GameInfoDetailedResponse } from '../models/GameInfoDetailedResponse'
-import type { GamesInfoDetailedResponse } from '../models/GamesInfoDetailedResponse'
-import type { NewCharacter } from '../models/NewCharacter'
-import type { PassDetailedResponse } from '../models/PassDetailedResponse'
+import type { CharAddedDetailedResponse } from '../models/CharAddedDetailedResponse';
+import type { GameCreation } from '../models/GameCreation';
+import type { GameInfoDetailedResponse } from '../models/GameInfoDetailedResponse';
+import type { GamesInfoDetailedResponse } from '../models/GamesInfoDetailedResponse';
+import type { NewCharacter } from '../models/NewCharacter';
 
-import type { CancelablePromise } from '../core/CancelablePromise'
-import { OpenAPI } from '../core/OpenAPI'
-import { request as __request } from '../core/request'
+import type { CancelablePromise } from '../core/CancelablePromise';
+import { OpenAPI } from '../core/OpenAPI';
+import { request as __request } from '../core/request';
 
 export class ApiGameApiService {
+
     /**
      * @returns GamesInfoDetailedResponse Game found
      * @throws ApiError
@@ -24,17 +24,17 @@ export class ApiGameApiService {
             errors: {
                 500: `Internal Server Error`,
             },
-        })
+        });
     }
 
     /**
-     * @param requestBody
-     * @returns PassDetailedResponse Found class from database
+     * @param requestBody 
+     * @returns GameInfoDetailedResponse Found class from database
      * @throws ApiError
      */
     public static startGame(
-        requestBody: GameCreation,
-    ): CancelablePromise<PassDetailedResponse> {
+requestBody: GameCreation,
+): CancelablePromise<GameInfoDetailedResponse> {
         return __request(OpenAPI, {
             method: 'POST',
             url: '/api/game',
@@ -44,7 +44,7 @@ export class ApiGameApiService {
                 304: `Could not find class from database`,
                 500: ` Internal error occured`,
             },
-        })
+        });
     }
 
     /**
@@ -53,36 +53,36 @@ export class ApiGameApiService {
      * @throws ApiError
      */
     public static getGame(
-        pass: string,
-    ): CancelablePromise<GameInfoDetailedResponse> {
+pass: string,
+): CancelablePromise<GameInfoDetailedResponse> {
         return __request(OpenAPI, {
             method: 'GET',
             url: '/api/game/{pass}',
             path: {
-                pass: pass,
+                'pass': pass,
             },
             errors: {
                 404: `Could not find class from database`,
                 500: ` Internal error occured`,
             },
-        })
+        });
     }
 
     /**
      * @param pass Password for entering the game.
-     * @param requestBody
+     * @param requestBody 
      * @returns CharAddedDetailedResponse Added Character to Game
      * @throws ApiError
      */
     public static addCharacter(
-        pass: string,
-        requestBody: NewCharacter,
-    ): CancelablePromise<CharAddedDetailedResponse> {
+pass: string,
+requestBody: NewCharacter,
+): CancelablePromise<CharAddedDetailedResponse> {
         return __request(OpenAPI, {
             method: 'POST',
             url: '/api/game/{pass}',
             path: {
-                pass: pass,
+                'pass': pass,
             },
             body: requestBody,
             mediaType: 'application/json',
@@ -91,6 +91,7 @@ export class ApiGameApiService {
                 404: `Could not find class from database`,
                 500: ` Internal error occured`,
             },
-        })
+        });
     }
+
 }
